--- a/src/amo/components/CollectionSort/styles.scss
+++ b/src/amo/components/CollectionSort/styles.scss
@@ -1,7 +1,7 @@
 @use '~amo/css/styles' as *;
 
 .CollectionSort-label {
-  color: $grey-50;
+  color: var(--sub-text-color);
   display: block;
   padding-bottom: 6px;
 }
